force-app/main/default/objects/ccrz__E_CartCoupon__c/ccrz__E_CartCoupon__c.object-meta.xml
<CustomObject>
    <description>It creates many-to many relationship between E_Coupon and E_Cart</description>
    <label>CC Cart Coupon</label>
    <nameField>
        <label>E_CartCoupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Cart Coupons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>