force-app/main/default/objects/ccrz__E_CartCoupon__c/fields/ccrz__CartCouponId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CartCouponId__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>CartCoupon Id</label>
    <type>AutoNumber</type>
</CustomField>