force-app/main/default/objects/ccrz__E_CartCoupon__c/fields/ccrz__Coupon__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Coupon__c</fullName>
    <label>Coupon</label>
    <referenceTo>ccrz__E_Coupon__c</referenceTo>
    <relationshipLabel>Cart Coupons</relationshipLabel>
    <relationshipName>E_CartCoupons</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>